# kudos-testing

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierrc  CODESTYLE.md  Makefile  README.md  amocrm-integration.md  articlesFull.json  categories.json  compose.yml  db.sqlite3  delivery_pricing_task.md  footer.md  installerqualification_setup_tz.md  kudos-order-waybill-pdf.md  landing-catalogue.md  landing.md  logistics_task_codex.md  manage.py  new-arrivals-section-task.md  pnpm-lock.yaml  pnpm-workspace.yaml  products_api_spec.md  pyproject.toml  rental_special_spec.md  stocks.json  yandex-maps-integration.md  Неделя_1_план_разработки_admin_agg.md  Неделя_2_план_разработки.md  ТЗ_kudos_ru.md
backend/: Dockerfile  Makefile  README.md  README.ru.md  articlesFull.json  db.sqlite3  entrypoint.sh  images_manifest.csv  images_manifest.json  manage.py  pyproject.toml  stocks.json  Изделия(2).xlsx  Изделия.xlsx
backend/applications/api/: models.py  tests.py  urls.py
backend/applications/audit/: apps.py  serializers.py  urls.py  views.py
backend/applications/common/: url_utils.py
backend/applications/customers/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/applications/customers/migrations/: 0001_initial.py  0002_alter_contact_company_alter_contact_customer_and_more.py
backend/applications/logistics/: __init__.py  apps.py  urls.py
backend/applications/logistics/templates/pdf/: waybill.html
backend/applications/logistics/tests/: test_waybill.py
backend/applications/logistics/views/: waybill.py
backend/applications/orders/: admin.py  apps.py  models.py  permissions.py  public_views.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
backend/applications/orders/migrations/: 0001_initial.py  0002_order_services_total_amount.py  0002_orderitem_product_name_alter_orderitem_product.py  0002_orderitem_rental_fields.py  0003_order_logistics_fields.py  0003_orderdriver_remove_order_delivery_address_and_more.py  0004_order_address_structured.py  0004_order_comment_for_waybill.py  0005_order_service_breakdown.py  0005_order_time_windows.py  0006_deliverysettings.py  0006_order_driver.py  0007_order_delivery_pricing_details.py
backend/applications/orders/services/: __init__.py  delivery_pricing.py  setup_pricing.py  stock.py  yandex_maps.py
backend/applications/products/: __init__.py  admin.py  apps.py  choices.py  helpers.py  models.py  pagination.py  public_views.py  serializers.py  signals.py  storage.py  urls.py  views.py
backend/applications/products/management/commands/: HUI.py  _slug.py  aga.py  import_products_from_articles.py  import_products_from_excel.py  map_and_create_stocks.py  seed_categories.py  seed_installer_qualifications.py  seed_product_enums.py  sync_product_images.py
backend/applications/products/migrations/: 0001_initial.py  0002_add_color_transport_restriction_models.py  0002_alter_productimage_file.py  0002_installerqualification.py  0002_product_complementary_products.py  0002_rental_mode_special_tiers.py  0002_stocktransaction_created_by_and_more.py  0002_update_product_seo_fields.py  0003_color_transport_restriction.py  0003_color_transportrestriction_and_more.py  0003_installerqualification.py  0003_product_available_stock_qty_product_description_and_more.py  0003_product_description_product_stock_qty.py  0003_remove_product_occupancy_insurance_reserve_percent.py  0003_stocktransaction_affects_stock_and_more.py  0004_alter_product_available_stock_qty_and_more.py  0004_alter_product_setup_install_minutes_and_more.py  0004_alter_productimage_file.py  0004_remove_product_occupancy_insurance_reserve_percent_and_more.py  0005_installerqualification_pricing_fields.py  0006_transportrestriction_pricing_fields.py  0007_productgroup_and_similar_products.py  0008_productgroup_category_and_image.py  0009_category_image.py  0010_productgroup_show_in_new.py
backend/applications/products/tests/: test_api.py  test_seed_categories.py
backend/applications/system/: urls.py  views.py
backend/applications/users/: apps.py  models.py  permissions.py  rbac.py  serializers.py  urls.py  views.py
backend/applications/users/migrations/: 0001_initial.py  0002_alter_userprofile_role.py  0003_create_role_groups.py  0004_alter_userprofile_options.py  0005_update_role_permissions.py  0006_sync_orders_permissions.py  0007_alter_userprofile_role_alter_userprofile_user.py  0008_sync_logistics_permissions.py  0009_sync_waybill_permissions.py
backend/applications/users/tests/: test_users.py
backend/config/: .env.local  .env.local.example
backend/settings/: asgi.py  local_settings.py  urls.py  wsgi.py
backend/settings/components/: apps.py  base.py  cors.py  rest.py
backend/static/pdf/: waybill.css
backend/templates/pdf/: waybill.html
frontend/: .env.local  (+9 more)
(+332 files in other folders)
