[tool.poetry]
name = "backend-gateway"
version = "0.1.0"
description = "Django DRF gateway"
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.7"
djangorestframework = "3.16.1"
djangorestframework-simplejwt = "5.5.1"
django-cors-headers = "4.9.0"
django-environ = "0.11.2"
django-split-settings = "1.3.1"
uvicorn = {version = "0.37.0", extras = ["standard"]}

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
