[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Kudos backend service"
authors = ["IL-studio <welcome@il-studio.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
django = "^5.2.7"
django-braces = "^1.15.0"
django-cleanup = "^9.0.0"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-extra-views = "^0.16.0"
django-health-check = "^3.20.0"
django-loginas = "^0.3.12"
django-model-utils = "^5.0.0"
django-nplusone = "^0.0.5"
django-querycount = "^0.8.3"
django-split-settings = "^1.3.2"
django-spurl = "^0.6.8"
django-stubs = "^5.2.6"
ipython = "^8.28.0"
pillow = "^11.0.0"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
singlemodeladmin = "^0.9"

[tool.poetry.group.dev.dependencies]
covdefaults = "^2.3.0"
django-coverage-plugin = "^3.1.1"
django-debug-toolbar = "^6.0.0"
docutils = "^0.21.2"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.3"
pytest-django = "^4.11.1"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
    ".env_legacy",
]
target-version = "py312"


[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "E",
    "F",
	"I",
    "T20",
    "UP",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"import/*" = ["T20"]

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.settings"
