[tool.poetry]
name = "backend-gateway"
version = "0.1.0"
description = "Django DRF gateway"
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.7"
djangorestframework = "3.16.1"
djangorestframework-simplejwt = "5.5.1"
django-cors-headers = "4.9.0"
python-dotenv = "1.1.1"
uvicorn = {version = "0.37.0", extras = ["standard"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
