[tool.poetry]
name = "backend-gateway"
version = "0.1.0"
description = "Django DRF gateway"
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.7"
djangorestframework = "3.16.1"
djangorestframework-simplejwt = "5.5.1"
django-cors-headers = "4.9.0"
django-environ = "0.11.2"
django-split-settings = "1.3.1"
uvicorn = {version = "0.37.0", extras = ["standard"]}
django-auditlog = "3.0.0"
openpyxl = "^3.1.5"
pillow = "^11.1.0"
psycopg = {extras = ["binary"], version = "^3.2.12"}
django-model-utils = "^4.5.1"

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
    ".env_legacy",
    "__init__.py",
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "T20",
    "UP",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"import/*" = ["T20"]

[tool.ruff.format]
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


